Fixed text contrast and low resolution image issue.

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,16 @@
   /* Colors */
   --clr-white: hsl(0, 0%, 100%); /* White #FFFFFF */
   --clr-black: hsl(0, 0%, 0%); /* Black #000000 */
-  --clr-dark-gray: hsl(0, 0%, 63%); /* Dark Gray #A0A0A0 */
+  --clr-dark-gray: hsl(
+    0,
+    0%,
+    63%
+  ); /* Dark Gray #A0A0A0; from the original design */
+  --clr-dark-gray: hsl(
+    0,
+    0%,
+    35%
+  ); /* Dark Gray #595959; alternative to sufficiently contrast foregroud and background colors */
   --clr-very-dark-gray: hsl(0, 0%, 27%); /* Very Dark Gray #444444 */
   /* Fonts */
   --ff-body: "League Spartan", sans-serif;
